--- a/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-all.yaml
+++ b/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-all.yaml
@@ -10,6 +10,7 @@ phases:
       - echo $AWS_DEFAULT_REGION
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo $CODEBUILD_SOURCE_VERSION
+      - echo $IMAGE_TAG
       - echo $AWS_ACCOUNT_ID
       - echo $SERVICE_NAME
       - echo $CONTAINER_PORT
@@ -17,8 +18,8 @@ phases:
       - echo $BUILD_TYPE
       - echo $TARGET_TYPE
       - aws --version
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      #- COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      #- IMAGE_TAG=${COMMIT_HASH:=latest}
       - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
       - |
         if [ "$BUILD_TYPE" = "DOCKER" ]; then
@@ -26,8 +27,6 @@ phases:
         fi
   build:
     commands:
-      - export IMAGE_TAG=$COMMIT_HASH
-      - echo IMAGE_TAG is $IMAGE_TAG
       - echo Build started on `date`
       - echo $BUILD_TYPE
       - |
