--- a/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-all.yaml
+++ b/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-all.yaml
@@ -10,7 +10,6 @@ phases:
       - echo $AWS_DEFAULT_REGION
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo $CODEBUILD_SOURCE_VERSION
-      - echo $IMAGE_TAG
       - echo $AWS_ACCOUNT_ID
       - echo $SERVICE_NAME
       - echo $CONTAINER_PORT
@@ -18,8 +17,8 @@ phases:
       - echo $BUILD_TYPE
       - echo $TARGET_TYPE
       - aws --version
-      #- COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      #- IMAGE_TAG=${COMMIT_HASH:=latest}
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
       - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
       - |
         if [ "$BUILD_TYPE" = "DOCKER" ]; then
