--- a/projects/devops/image-ci/src/lib/cfn-template/ci-codecommit.yaml
+++ b/projects/devops/image-ci/src/lib/cfn-template/ci-codecommit.yaml
@@ -297,6 +297,10 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: ServiceName
+          - Name: ARTIFACT_BUCKET
+            Type: PLAINTEXT
+            Value:
+              Ref: S3BucketSourceArtifacts
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         ImagePullCredentialsType: CODEBUILD
         PrivilegedMode: true
@@ -321,7 +325,6 @@ Resources:
                   "echo $AWS_DEFAULT_REGION",
                   "echo $CODEBUILD_RESOLVED_SOURCE_VERSION",
                   "echo $CODEBUILD_SOURCE_VERSION",
-                  "echo $IMAGE_TAG",
                   "echo $AWS_ACCOUNT_ID",
                   "echo $SERVICE_NAME",
                   "echo $CONTAINER_PORT",
@@ -329,6 +332,8 @@ Resources:
                   "echo $BUILD_TYPE",
                   "echo $TARGET_TYPE",
                   "aws --version",
+                  "COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)",
+                  "IMAGE_TAG=${COMMIT_HASH:=latest}",
                   "export MAVEN_OPTS=\"-Xmx1024m -XX:MaxPermSize=512m\"",
                   "if [ \"$BUILD_TYPE\" = \"DOCKER\" ]; then\n  aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com\nfi\n"
                 ]
@@ -480,11 +485,10 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: BuildProject097C5DB7
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_CODECOMMIT_NS.CommitId}"}]'
               InputArtifacts:
                 - Name: Source
               Name: Build
-              Namespace: Namespace
+              Namespace: BUILD_Build_NS
               OutputArtifacts:
                 - Name: Build
               RoleArn:
@@ -515,7 +519,7 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: CodeBuildDeployPlojectF23FECA7
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_CODECOMMIT_NS.CommitId}"}]'
+                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{BUILD_Build_NS.IMAGE_TAG}"}]'
               InputArtifacts:
                 - Name: Build
               Name: Deploy
@@ -881,16 +885,6 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: S3BucketSourceArtifacts
-<<<<<<< HEAD
-=======
-          - Name: IMAGE_TAG
-            Type: PLAINTEXT
-<<<<<<< HEAD
-            Value: "#{SOURCE_CODECOMMIT_NS.CommitId}"
-=======
-            Value: "#{Namespace.IMAGE_TAG}"
->>>>>>> 5631ec19c1b774a75184646a7fb22a3ca70f7aff
->>>>>>> cf3afb2a720a7ff94bde7aaa28a71888c0b846c3
           - Name: TARGET_TYPE
             Type: PLAINTEXT
             Value:
