--- a/projects/devops/image-ci/src/lib/cfn-template/ci-github.yaml
+++ b/projects/devops/image-ci/src/lib/cfn-template/ci-github.yaml
@@ -264,6 +264,10 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: ServiceName
+          - Name: ARTIFACT_BUCKET
+            Type: PLAINTEXT
+            Value:
+              Ref: S3BucketSourceArtifacts
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         ImagePullCredentialsType: CODEBUILD
         PrivilegedMode: true
@@ -288,7 +292,6 @@ Resources:
                   "echo $AWS_DEFAULT_REGION",
                   "echo $CODEBUILD_RESOLVED_SOURCE_VERSION",
                   "echo $CODEBUILD_SOURCE_VERSION",
-                  "echo $IMAGE_TAG",
                   "echo $AWS_ACCOUNT_ID",
                   "echo $SERVICE_NAME",
                   "echo $CONTAINER_PORT",
@@ -296,6 +299,8 @@ Resources:
                   "echo $BUILD_TYPE",
                   "echo $TARGET_TYPE",
                   "aws --version",
+                  "COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)",
+                  "IMAGE_TAG=${COMMIT_HASH:=latest}",
                   "export MAVEN_OPTS=\"-Xmx1024m -XX:MaxPermSize=512m\"",
                   "if [ \"$BUILD_TYPE\" = \"DOCKER\" ]; then\n  aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com\nfi\n"
                 ]
@@ -445,10 +450,10 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: BuildProject097C5DB7
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_GITHUB_NS.CommitId}"}]'
               InputArtifacts:
                 - Name: Source
               Name: Build
+              Namespace: BUILD_Build_NS
               OutputArtifacts:
                 - Name: Build
               RoleArn:
@@ -479,7 +484,7 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: CodeBuildDeployPlojectF23FECA7
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_GITHUB_NS.CommitId}"}]'
+                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{BUILD_Build_NS.IMAGE_TAG}"}]'
               InputArtifacts:
                 - Name: Build
               Name: Deploy
@@ -756,12 +761,6 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: S3BucketSourceArtifacts
-<<<<<<< HEAD
-=======
-          - Name: IMAGE_TAG
-            Type: PLAINTEXT
-            Value: "#{SOURCE_GITHUB_NS.CommitId}"
->>>>>>> cf3afb2a720a7ff94bde7aaa28a71888c0b846c3
           - Name: TARGET_TYPE
             Type: PLAINTEXT
             Value:
