--- a/projects/devops/image-ci/src/lib/buildspec/buildspec-cd.yaml
+++ b/projects/devops/image-ci/src/lib/buildspec/buildspec-cd.yaml
@@ -37,7 +37,7 @@ phases:
         fi 
       - |
         if [ "$TARGET_TYPE" = "beanstalk" ]; then 
-          aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket="$ARTIFACT_BUCKET",S3Key="$SERVICE_NAME/Build/$IMAGE_TAG.zip" --auto-create-application
+          aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket="$ARTIFACT_BUCKET",S3Key="$SERVICE_NAME/$IMAGE_TAG.zip" 
           aws elasticbeanstalk update-environment --application-name $SERVICE_NAME --environment-name "$DEPLOY_ENV_NAME-$SERVICE_NAME" --version-label=v$CODEBUILD_BUILD_NUMBER
         fi 
       - |
