--- a/projects/devops/image-ci/src/lib/cfn-template/ci-codecommit.yaml
+++ b/projects/devops/image-ci/src/lib/cfn-template/ci-codecommit.yaml
@@ -485,7 +485,6 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: BuildProject097C5DB7
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_CODECOMMIT_NS.CommitId}"}]'
               InputArtifacts:
                 - Name: Source
               Name: Build
@@ -520,11 +519,7 @@ Resources:
               Configuration:
                 ProjectName:
                   Ref: CodeBuildDeployPlojectF23FECA7
-<<<<<<< HEAD
                 EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{BUILD_Build_NS.IMAGE_TAG}"}]'
-=======
-                EnvironmentVariables: '[{"name":"IMAGE_TAG","type":"PLAINTEXT","value":"#{SOURCE_CODECOMMIT_NS.CommitId}"}]'
->>>>>>> 764a2734a836af96c6483521b8944accb5f81533
               InputArtifacts:
                 - Name: Build
               Name: Deploy
@@ -890,19 +885,9 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: S3BucketSourceArtifacts
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
           - Name: IMAGE_TAG
             Type: PLAINTEXT
-<<<<<<< HEAD
-            Value: "#{SOURCE_CODECOMMIT_NS.CommitId}"
-=======
             Value: "#{Namespace.IMAGE_TAG}"
->>>>>>> 5631ec19c1b774a75184646a7fb22a3ca70f7aff
->>>>>>> cf3afb2a720a7ff94bde7aaa28a71888c0b846c3
->>>>>>> 764a2734a836af96c6483521b8944accb5f81533
           - Name: TARGET_TYPE
             Type: PLAINTEXT
             Value:
@@ -947,7 +932,7 @@ Resources:
                   "echo Post Build started on `date`",
                   "echo $TARGET_TYPE",
                   "if [ \"$TARGET_TYPE\" = \"ecs\" ]; then \n  aws ecs update-service --cluster $DEPLOY_ENV_NAME --service \"$SERVICE_NAME-$ENVIRONMENT\" --force-new-deployment --region $AWS_DEFAULT_REGION\nfi \n",
-                  "if [ \"$TARGET_TYPE\" = \"beanstalk\" ]; then \n  aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket=\"$ARTIFACT_BUCKET\",S3Key=\"$SERVICE_NAME/Build/$IMAGE_TAG.zip\" --auto-create-application\n  aws elasticbeanstalk update-environment --application-name $SERVICE_NAME --environment-name \"$DEPLOY_ENV_NAME-$SERVICE_NAME\" --version-label=v$CODEBUILD_BUILD_NUMBER\nfi \n",
+                  "if [ \"$TARGET_TYPE\" = \"beanstalk\" ]; then \n  aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket=\"$ARTIFACT_BUCKET\",S3Key=\"$SERVICE_NAME/$IMAGE_TAG.zip\" \n  aws elasticbeanstalk update-environment --application-name $SERVICE_NAME --environment-name \"$DEPLOY_ENV_NAME-$SERVICE_NAME\" --version-label=v$CODEBUILD_BUILD_NUMBER\nfi \n",
                   "if [ \"$TARGET_TYPE\" = \"eks\" ]; then \n  sed -i.bak 's#AWS_ECR_URI#'\"$AWS_ECR_URI\"'#' ./EKS/deploy.yaml\n  sed -i.bak 's#DATE_STRING#'\"$DATE\"'#' ./EKS/deploy.yaml\n  kubectl apply -f ./EKS/deploy.yaml\n  kubectl apply -f ./EKS/svc.yaml\nfi \n",
                   "if [ \"$TARGET_TYPE\" = \"lambda\" ]; then \n  echo Nothing to do on LAMBDA \nfi \n"
                 ]
