--- a/projects/devops/image-ci/src/lib/cfn-template/buildspec-cfn.yaml
+++ b/projects/devops/image-ci/src/lib/cfn-template/buildspec-cfn.yaml
@@ -7,7 +7,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Creating Docker Compose Context
       - curl "http://169.254.170.2${AWS_CONTAINER_CREDENTIALS_RELATIVE_URI}" > creds.json
       - export AWS_ACCESS_KEY_ID=$(cat creds.json | jq -r .AccessKeyId)
