--- a/.github/workflows/common-github-oidc-provider.yaml
+++ b/.github/workflows/common-github-oidc-provider.yaml
@@ -9,10 +9,11 @@ on:
       - "./github/workflows/common/github-oidc-provider.yaml"
 env:
   CI: "true"
-  CDK_DEFAULT_ACCOUNT: '037729278610'
+  CDK_DEFAULT_ACCOUNT: '484752921218'
   CDK_DEFAULT_REGION: ap-northeast-2
   PROJECT_NAME: 'common-github-oidc-provider'
-  EXECUTE_ROLE: github-deploy-role
+  #EXECUTE_ROLE: github-deploy-role
+  EXECUTE_ROLE: githubActionRole
 
 
 jobs:
