--- a/.github/workflows/network-security-group.yaml
+++ b/.github/workflows/network-security-group.yaml
@@ -9,10 +9,11 @@ on:
       - "./github/workflows/network/security-group.yaml"
 env:
   CI: "true"
-  CDK_DEFAULT_ACCOUNT: '037729278610'
+  CDK_DEFAULT_ACCOUNT: '484752921218'
   CDK_DEFAULT_REGION: ap-northeast-2
   PROJECT_NAME: 'network-security-group'
-  EXECUTE_ROLE: github-deploy-role
+  #EXECUTE_ROLE: github-deploy-role
+  EXECUTE_ROLE: githubActionRole
 
 
 jobs:
