--- a/projects/network/vpc/src/lib/cfn-template/3-tier.template.yaml
+++ b/projects/network/vpc/src/lib/cfn-template/3-tier.template.yaml
@@ -61,13 +61,11 @@ Metadata:
       pVpcName:
         default: VPC Name
       pOrg:
-        default: Business Scope
+        default: Project Name
       pSystem:
         default: System Identifier
       pCidr:
         default: VPC CIDR Block
-      sCidr:
-        default: Seconary VPC CIDR Block
       pNumAzs:
         default: Number of AZs
       pCreateInternetGateway:
@@ -117,17 +115,21 @@ Parameters:
   pVpcName:
     Type: String
     Description: Name of the VPC and used to qualify names of associated resources
-    Default: dev
+    Default: vpc
 
   pOrg:
     Type: String
-    Description: Used to qualify IAM resource names
-    Default: example
+    Description: project name
+    Default: acme
 
   pSystem:
     Type: String
-    Description: Used to qualify IAM role path
-    Default: infra
+    Description: Environment
+    AllowedValues:
+      - "dev"
+      - "stage"
+      - "prod"
+    Default: dev
 
   pCidr:
     Type: String
@@ -445,6 +447,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier1Name}-1'
+      - Key: kubernetes.io/role/elb
+        Value: true
 
   rTier1Subnet2:
     Type: AWS::EC2::Subnet
@@ -458,6 +462,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier1Name}-2'
+      - Key: kubernetes.io/role/elb
+        Value: true
 
   rTier1Subnet3:
     Type: AWS::EC2::Subnet
@@ -471,6 +477,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier1Name}-3'
+      - Key: kubernetes.io/role/elb
+        Value: true
 
   rTier1NatGatewaySubnet1:
     Type: AWS::EC2::NatGateway
@@ -611,6 +619,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier2Name}-1'
+      - Key: kubernetes.io/role/internal-elb
+        Value: true    
 
   rTier2Subnet2:
     Type: AWS::EC2::Subnet
@@ -624,6 +634,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier2Name}-2'
+      - Key: kubernetes.io/role/internal-elb
+        Value: true    
 
   rTier2Subnet3:
     Type: AWS::EC2::Subnet
@@ -637,6 +649,8 @@ Resources:
       Tags:
       - Key: Name
         Value: !Sub '${pSystem}-${pVpcName}-${pTier2Name}-3'
+      - Key: kubernetes.io/role/internal-elb
+        Value: true    
 
   rTier2RouteTable1:
     Type: AWS::EC2::RouteTable
