--- a/.github/workflows/container-eks.yaml
+++ b/.github/workflows/container-eks.yaml
@@ -1,17 +1,17 @@
-name: Deploy s3-resource-based-role Service Catalog Product 
+name: Deploy eks Service Catalog Product 
 
 on:
   push:
     branches:
       - "main"
     paths:
-      - "projects/security/s3-resource-based-role/**"
-      - "./github/workflows/security/s3-resource-based-role.yaml"
+      - "projects/container/eks/**"
+      - "./github/workflows/container/eks.yaml"
 env:
   CI: "true"
   CDK_DEFAULT_ACCOUNT: '484752921218'
   CDK_DEFAULT_REGION: ap-northeast-2
-  PROJECT_NAME: 'security-s3-resource-based-role'
+  PROJECT_NAME: 'container-eks'
   #EXECUTE_ROLE: github-deploy-role
   EXECUTE_ROLE: githubActionRole
 
@@ -40,13 +40,13 @@ jobs:
         #if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: projects/security/s3-resource-based-role
+          working-directory: projects/container/eks
 
       - name: Cache node modules
         uses: actions/cache@v2
         id: cache
         with:
-          path: projects/security/s3-resource-based-role/node_modules
+          path: projects/container/eks/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: assume role
@@ -58,7 +58,7 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
       
       # Publish artifact
       #- name: Publish artifact
@@ -66,12 +66,12 @@ jobs:
       #  with:
       #    name: published-app
       #    path: |
-      #      projects/security/s3-resource-based-role
-      #      !projects/security/s3-resource-based-role/node_modules
+      #      projects/container/eks
+      #      !projects/container/eks/node_modules
       
       - name: Deploy to AWS cdk dev App
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
       
       #- uses: trstringer/manual-approval@v1
       #  with:
@@ -104,21 +104,21 @@ jobs:
       #  uses: actions/download-artifact@v2
       #  with:
       #    name: published-app
-      #    path: projects/security/s3-resource-based-role
+      #    path: projects/container/eks
       
       - name: Cache node modules
         uses: actions/cache@v2
         id: cache
         with:
           #working-directory: projects/${{inputs.app_name}}
-          path: projects/security/s3-resource-based-role/node_modules
+          path: projects/container/eks/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: projects/security/s3-resource-based-role
+          working-directory: projects/container/eks
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -129,11 +129,11 @@ jobs:
       
       - name: cdk build 
         run: npm run synth
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
       
       - name: Destroy dev branch cdk app
         run: yarn cdk destroy --all --force
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -159,14 +159,14 @@ jobs:
       #  id: cache
       #  with:
           #working-directory: projects/${{inputs.app_name}}
-      #    path: projects/security/{{PROJECT_NAME}}/node_modules
+      #    path: projects/container/{{PROJECT_NAME}}/node_modules
       #    key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         #if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: projects/security/s3-resource-based-role
+          working-directory: projects/container/eks
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -177,12 +177,12 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
       
       # Deploy to web app
       - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: projects/security/s3-resource-based-role
+        working-directory: projects/container/eks
   
   #destroy-dev:
   #  runs-on: 'ubuntu-latest'
