--- a/projects/container/eks/src/lib/cfn-template/amazon-eks-entrypoint-existing-vpc.template.yaml
+++ b/projects/container/eks/src/lib/cfn-template/amazon-eks-entrypoint-existing-vpc.template.yaml
@@ -769,11 +769,11 @@ Parameters:
     Type: "AWS::EC2::VPC::Id"
     Description: ID of your existing VPC (e.g., vpc-0343606e).
   PublicSubnet1ID:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
     Description: ID of the public subnet in Availability Zone 1 of your existing VPC (e.g., subnet-a0246dcd).
     Default: ""
   PublicSubnet2ID:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
     Description: ID of the public subnet in Availability Zone 2 of your existing VPC (e.g., subnet-b1236eea).
     Default: ""
   PublicSubnet3ID:
