--- a/projects/devops/cicd/src/lib/buildspec/buildspec-ci-all.yaml
+++ b/projects/devops/cicd/src/lib/buildspec/buildspec-ci-all.yaml
@@ -12,11 +12,13 @@ phases:
       - echo $CODEBUILD_SOURCE_VERSION
       - echo $AWS_ACCOUNT_ID
       - echo $SERVICE_NAME
-      - echo $CONTAINER_PORT
       - echo $ARTIFACT_BUCKET
+      - echo $BUILD_TYPE
+      - echo $TARGET_TYPE
       - aws --version
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - export IMAGE_TAG=${COMMIT_HASH:=latest}
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
       - |
         if [ "$BUILD_TYPE" = "DOCKER" ]; then
           aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
@@ -33,7 +35,9 @@ phases:
         fi
       - |
         if [ "$BUILD_TYPE" = "MAVEN" ]; then 
-          ./mvn clean package ;
+          which mvn;
+          chmod +x mvnw ;
+          ./mvnw package;
         fi
       - |
         if [ "$BUILD_TYPE" = "NPM" ]; then 
@@ -44,8 +48,13 @@ phases:
         if [ "$BUILD_TYPE" = "DOCKER" ]; then 
           echo Building the Docker image...
           docker build -t $REPOSITORY_URI:latest .
+
           echo Tagging Docker image...
           docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+
+          echo Pushing the Docker images...
+          docker push $REPOSITORY_URI:latest
+          docker push $REPOSITORY_URI:$IMAGE_TAG
         fi
   post_build:
     commands:
@@ -53,25 +62,26 @@ phases:
       - echo $BUILD_TYPE
       - |
         if [ "$BUILD_TYPE" = "GRADLE" ]; then 
-          zip -r $IMAGE_TAG.zip build/libs/*.jar
+          mv build/libs/*.jar app.jar
+          mv .ebextentions .ebextentions
+          echo Writing Procfile for Beanstlak...
+          zip -r $IMAGE_TAG.zip app.jar .ebextentions
           aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/$IMAGE_TAG.zip
           aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/latest.zip
         fi
       - |
         if [ "$BUILD_TYPE" = "MAVEN" ]; then 
-          zip -r $IMAGE_TAG.zip target/*.jar
+          mv target/*.jar app.jar
+          mv .ebextentions .ebextentions
+          echo Writing Procfile for Beanstlak...
+          zip -r $IMAGE_TAG.zip app.jar .ebextentions
           aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/$IMAGE_TAG.zip
           aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/latest.zip
         fi
 
       - |
         if [ "$BUILD_TYPE" = "DOCKER" ]; then 
-          echo Pushing the Docker images...
-          docker push $REPOSITORY_URI:latest
-          docker push $REPOSITORY_URI:$IMAGE_TAG
-          echo $BUILD_TYPE
-
-          if [ "$TARGET_TYPE" = "ECS" ]; then 
+          if [ "$TARGET_TYPE" = "ecs" ]; then 
             echo Writing image definitions file for ECS...
             printf '[{"name": "%s", "imageUri":"%s"}]' $SERVICE_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
             zip -r $IMAGE_TAG.zip imagedefinitions.json
@@ -79,7 +89,7 @@ phases:
             aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/latest.zip
           fi 
 
-          if [ "$TARGET_TYPE" = "BEANSTALK" ]; then 
+          if [ "$TARGET_TYPE" = "beanstalk" ]; then 
             echo Writing Dockerrun.aws.json file for Beanstalk ...
             printf '{ "AWSEBDockerrunVersion":"1","Image": {"Name": "%s"}, "Ports":[{"ContainerPort": "%s"}] }' $REPOSITORY_URI:$IMAGE_TAG $CONTAINER_PORT > Dockerrun.aws.json
             zip -r $IMAGE_TAG.zip Dockerrun.aws.json
@@ -87,11 +97,19 @@ phases:
             aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/latest.zip
           fi 
 
-          if [ "$TARGET_TYPE" = "EKS" ]; then 
+          if [ "$TARGET_TYPE" = "eks" ]; then 
             echo Writing image definitions file for EKS...
+            mv ./k8s/* ./k8s
+            zip -r $IMAGE_TAG.zip ./k8s
+            aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/$IMAGE_TAG.zip
+            aws s3 cp ./$IMAGE_TAG.zip s3://$ARTIFACT_BUCKET/$SERVICE_NAME/latest.zip
           fi 
 
-          if [ "$TARGET_TYPE" = "LAMBDA" ]; then 
+          if [ "$TARGET_TYPE" = "lambda" ]; then 
             echo Writing image definitions file for LAMBDA...
           fi 
         fi
+artifacts:
+  files:
+    - '**/*'
+  name: $IMAGE_TAG
