--- a/projects/devops/image-ci/src/lib/buildspec/buildspec-cd.yaml
+++ b/projects/devops/image-ci/src/lib/buildspec/buildspec-cd.yaml
@@ -3,12 +3,12 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - echo deploy envorinment variables 
       - echo $AWS_DEFAULT_REGION
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo $SERVICE_NAME
       - echo $ENVIRONMENT
       - echo $CODEBUILD_BUILD_NUMBER
+      - echo $DEPLOY_ENV_NAME
       - echo $AWS_ACCOUNT_ID
       - echo $REPOSITORY_URI
       - echo $TARGET_TYPE
@@ -16,13 +16,17 @@ phases:
       - echo $IMAGE_TAG
       - aws --version
       - |
-        if [ "TARGET_TYPE" = "EKS"]; then
+        if [ "$TARGET_TYPE" = "eks" ]; then
           curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/kubectl
           chmod +x ./kubectl
           mv ./kubectl /usr/local/bin/kubectl
-          mkdir ~/.kube
-          aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig --name ${DEPLOY_ENV_NAME}
-          kubectl get po -n kube-system
+          curl -o aws-iam-authenticator https://s3.us-west-2.amazonaws.com/amazon-eks/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
+          chmod +x ./aws-iam-authenticator
+          mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
+          echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
+          aws-iam-authenticator help
+          mkdir -p ~/.kube
+          aws eks --region ap-northeast-2 update-kubeconfig --name awstf-eks-dev
         fi
   build:
     commands:
@@ -42,10 +46,18 @@ phases:
         fi 
       - |
         if [ "$TARGET_TYPE" = "eks" ]; then 
-          sed -i.bak 's#AWS_ECR_URI#'"$AWS_ECR_URI"'#' ./EKS/deploy.yaml
-          sed -i.bak 's#DATE_STRING#'"$DATE"'#' ./EKS/deploy.yaml
-          kubectl apply -f ./EKS/deploy.yaml
-          kubectl apply -f ./EKS/svc.yaml
+          # from S3 Bucket
+          aws s3 cp s3://$ARTIFACT_BUCKET/$SERVICE_NAME/$IMAGE_TAG.zip .
+          unzip $IMAGE_TAG.zip
+          ls -al ./k8s
+          sed -i "s#SERVICE_NAME#$SERVICE_NAME#g" ./k8s/deployment.yaml
+          sed -i "s#ENVIRONMENT#$ENVIRONMENT#g" ./k8s/deployment.yaml
+          sed -i "s#IMAGE_TAG#$IMAGE_TAG#g" ./k8s/deployment.yaml
+          sed -i "s#CONTAINER_PORT#$CONTAINER_PORT#g" ./k8s/deployment.yaml
+          sed -i "s#SERVICE_NAME#$SERVICE_NAME#g" ./k8s/service.yaml
+          sed -i "s#ENVIRONMENT#$ENVIRONMENT#g" ./k8s/service.yaml
+          cat ./k8s/deployment.yaml
+          kubectl apply -f ./k8s
         fi 
       - |
         if [ "$TARGET_TYPE" = "lambda" ]; then 
