--- a/projects/devops/cicd/package.json
+++ b/projects/devops/cicd/package.json
@@ -44,8 +44,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/randomstring": "^1.1.8",
     "aws-cdk-lib": "^2.46.0",
     "constructs": "^10.0.5",
+    "randomstring": "^1.2.2",
     "yaml": "^2.1.3"
   },
   "license": "Apache-2.0",
