update container cicd

--- a/projects/devops/cicd/src/lib/buildspec/buildspec-ci-all.yaml
+++ b/projects/devops/cicd/src/lib/buildspec/buildspec-ci-all.yaml
@@ -109,7 +109,7 @@ phases:
             echo Writing image definitions file for LAMBDA...
           fi 
         fi
-artifacts:
+rtifacts:
   files:
     - '**/*'
   name: $IMAGE_TAG
